--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -46,13 +46,16 @@ knitr::include_graphics("/images/BART/界面.png")
 
 # 详细说明
 
-**气球爆炸几率**。假设气球最大打气次数为 $N$ （参数配置），那么，用户第 $K$ 次打气时的气球爆炸的概率为 $\frac{1}{N - K + 1}$ 。例如：若气球最大打气次数为`5`，那么
+<!-- **气球爆炸几率**。假设气球最大打气次数为 $N$ （参数配置），那么，用户第 $K$ 次打气时的气球爆炸的概率为 $\frac{1}{N - K + 1}$ 。例如：若气球最大打气次数为`5`，那么 -->
 
-1. 用户执行第1次打气时，则从[1, 2, 3, 4, 5]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
-1. 若用户执行第2次打气，则从[1, 2, 3, 4]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
-1. 依此类推。
+<!-- 1. 用户执行第1次打气时，则从[1, 2, 3, 4, 5]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。 -->
+<!-- 1. 若用户执行第2次打气，则从[1, 2, 3, 4]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。 -->
+<!-- 1. 依此类推。 -->
 
-**实际测评**。实际测评时会保证气球个数（`quantity`）是最大打气次数（`maxBlow`）的倍数。例如最大打气次数为10，气球个数设置为10，20，30，……。假如这个倍数是 $M$ ，则 $M = \frac{quantity}{maxBlow}$ 。测评时候随机设定每个气球的爆炸次数为1，2，3，……，`maxBlow`，且每种爆炸次数的气球个数都为 $M$ 个。
+**气球爆炸前吹气次数设置**。
+
+* 实际测评时会保证气球个数（配置参数：`quantity`）是最大打气次数（配置参数：`maxBlow`）的倍数。例如若最大打气次数为10，那么气球个数设置为10，20，30，……。假如这个倍数是 $M$ ，则 $M = \frac{quantity}{maxBlow}$ 。
+* 测评时候随机设定每个气球的爆炸次数为1，2，3，……，`maxBlow`，保证每种爆炸次数的气球个数都为 $M$ 个即可。
 
 # 配置参数
 
