Modify configs for firefly
* Change name from VSTM to firefly
* Add description for sequence

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -1,9 +1,9 @@
 ---
-title: 森林中的萤火虫（VSTM）
+title: 森林中的萤火虫（firefly）
 author: 申宇杏
 date: 2018-04-02
-slug: 79-VSTM
-code: "79"
+slug: 02102-firefly
+code: "02102"
 tasknames: "视觉短时记忆任务"
 output:
   blogdown::html_page:
@@ -13,8 +13,8 @@ output:
 
 ```{r basic settings, include=FALSE}
 NAME_CN <- "森林中的萤火虫"
-NAME_EN <- "VSTM"
-CODE <- "79"
+NAME_EN <- "firefly"
+CODE <- "02102"
 SDK <- 999
 ```
 
@@ -58,15 +58,9 @@ knitr::include_graphics("/images/VSTM/firefly.png")
     - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
     - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）
 
-## 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+## 序列配置
 
-<!--
-+ **序列**
-    - 单个试次要呈现的闪烁的萤火虫个数有5种情况，3~7个，干扰的不发光的萤火虫数量比发光的多两个，总共2n+2
-    - 正式测评中总计15次，每种情况3次（待定）
-    - 做对了加一个目标刺激，做错两次减一个，错一次不变
-    - 练习2个萤火虫的情况，1次
--->
+每次需要追踪的萤火虫数目有5种可能（即3、4、5、6、7），不跟踪的萤火虫数目则始终为7个。每种可能的跟踪萤火虫情况分别出现2次，因而每个用户都累计会完成10次判断，同时保证10次判断的跟踪萤火虫数目是随机打乱了的。
 
 # 配置参数
 
