Delete unnecessary version of flanker/filtering task

--- a/content/post/00101_Flanker.Rmd
+++ b/content/post/00101_Flanker.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 方向达人（Flanker）
 author: 张亮
-date: 2018-03-03
+date: 2018-03-02
 slug: 00101-flanker
 code: "00101"
 tasknames: "侧抑制任务"
@@ -23,19 +23,24 @@ VER <- "V4"
 * **题目编号**：`r CODE`
 * **任务描述**：测查自控力，特别是排除干扰的能力。
 * **测查能力**：自控力-控制冲动
-* **相关任务**：[小鱼饲养员](`r blogdown::shortcode("relref", "00102_Flanker2.html")`)。本题目与该题目属于同种题目，且本题目适用于10岁以上儿童。
+* **相关任务**：[方向达人](`r blogdown::shortcode("relref", "00101_Flanker.html")`)。本题目与该题目属于同种题目，且本题目适用于10岁及10岁以下儿童。
 * **参考演示**：参考美国国立卫生院的[题目设计](http://player.youku.com/embed/XMzIzMTA1NTk4NA==)。
 
 # 交互界面
 
-首先，屏幕中央呈现一个加号（`+`，即注视点，用于提醒用户注意屏幕中央）。一定时间（由参数控制）后，加号消失，同时屏幕中央呈现一个刺激（由**5个左右朝向的箭头**组成的图片，请查看详细参数），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮。用户需要在刺激消失（刺激呈现最长时间由参数控制）前**最中间箭头的朝向**做出操作反应。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
+首先，屏幕中央呈现一个加号（`+`，即注视点，用于提醒用户注意屏幕中央）。一定时间（由参数控制）后，加号消失，同时屏幕中央呈现一个刺激（由**5条小鱼**排成一排而组成的图片，具体参看详细说明），且屏幕下方左右分别需要*同时*呈现<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮。用户需要在刺激消失（刺激呈现最长时间由参数控制）前根据**最中间小鱼鱼头的朝向**做出操作反应（见详细说明）。用户反应或达到刺激最大呈现时间后刺激消失，接着屏幕保持一定时间的空白（试次间隔时间）后进入下一个试次。
 
-**引导与练习**。引导两个试次：第一个刺激中间和两边都朝左，并且强调一下中间的箭头，提示用户按照中间箭头的方向进行反应；第二个刺激是中间朝右，两边朝左，不需要强调中间的箭头。引导后，随机做16个试次的练习，4种刺激（请查看详细参数）各4次。
+**引导与练习**。引导分为两部分：
+
+1. 只呈现一条小鱼（即中间的小鱼），用户对小鱼的朝向进行判断。引导后随机完成4个练习，即左右朝向各两个。
+1. 中间和两侧的小鱼同时出现，提醒用户对中间小鱼的朝向进行判断。引导后，随机做16个试次的练习，4种刺激（请查看详细参数）各4次。
+
+为了增加用户（儿童）的兴趣，引导时候告诉用户点击中间小鱼鱼头朝向的一侧（`Android/iOS`）或按与鱼头朝向相同的方向键（`PC/Web`）以喂养小鱼，并使用喂食成功小鱼很开心作为正确的反馈、喂食失败小鱼很伤心作为错误的反馈（*反馈在正式测试时候移除*）。
 
 # 详细说明
 
 * 刺激
-    + **刺激配置**：由一排包含**5个朝左或朝右的箭头**的图片组成。其中：最中间的箭头为**目标刺激**，即用户需要根据该刺激确定操作方式；两侧的四个箭头为**干扰刺激**，即用户需要忽略这些刺激的干扰只对中间的箭头进行操作。详细请看下方**刺激列表**。
+    + **刺激配置**：由一排包含**5条鱼头朝左或朝右的卡通小鱼**的图片组成。其中：最中间的小鱼为**目标刺激**，即用户需要根据该刺激确定操作方式；两侧的四条小鱼为**干扰刺激**，即用户需要忽略这些刺激的干扰只对中间的小鱼进行操作。详细请看下方**刺激列表**。
     + **刺激呈现**
         - 注视点符号`+`呈现时间由参数`isi`控制，默认值为`500ms`。
         - 单个刺激呈现时间由参数`maxSt`控制，默认值为`2000ms`。
@@ -48,9 +53,9 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "stimuli.csv"
 
 * 操作
     + **操作方式**
-        - **`Android/iOS`**：点击触摸屏下方的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮进行反应，即箭头朝左则点击按钮<kbd>&larr;</kbd>，箭头朝右则点击按钮<kbd>&rarr;</kbd>。
+        - **`Android/iOS`**：点击触摸屏下方的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>按钮饲养小鱼，即小鱼鱼头朝左则点击按钮<kbd>&larr;</kbd>，小鱼鱼头朝右则点击按钮<kbd>&rarr;</kbd>。
         - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备键盘上的<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>进行操作，分别表示按钮<kbd>&larr;</kbd>和<kbd>&rarr;</kbd>。
-    + **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果与中间箭头朝向一致，则为正确；否则为错误。
+    + **判断正误**：所有试次都需要操作，没有操作则使用`-1`（参靠“标准.html”）表示正确与否。当用户操作后，如果与中间小鱼鱼头朝向一致，则为正确；否则为错误。
     + **反馈**
         - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
         - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出听觉和视觉反馈（即达到最大显示时间后用户还未操作时，需要给出负性的声音和视觉反馈；只要用户操作了，则给出中性的声音和视觉反馈）。
