Add primitive description for first part

--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -38,6 +38,8 @@ SDK <- rmarkdown::metadata$sdk
 
 # 交互界面
 
+目前题库里面已经有一个初步完成的题目（`id: 97990, path: /v2/WCST`），目前需要将本题目做得更加规范、更加顺畅。
+
 # 详细说明
 
 # 配置参数
