Add description of cards and test rules

--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -42,11 +42,21 @@ SDK <- rmarkdown::metadata$sdk
 
 目前题库里面已经有一个初步完成的题目（`id: 97990`，`path: /v2/WCST`），基本界面如图\@ref(fig:interface)。目前需要将本题目做得更加规范、更加顺畅。
 
-```{r interface, fig.align="center", fig.cap="基本界面", echo=FALSE}
+```{r interface, echo=FALSE, fig.align="center", fig.cap="基本界面", out.width="80%"}
 knitr::include_graphics("/images/WCST/interface.png")
 ```
 
+每个试次中，页面上方都有一张卡片（称为**测试卡片**）出现，并要求用户从下方的四张**备选卡片**中选择和该卡片具有相同**特征**的卡片。
+
 ## 详细说明
+
+### 卡片特征
+
+每一张卡片都以三种特征来刻画，即**颜色**、**形状**和**数目**。每种特征都恰好有4种可能情形（从图\@ref(fig:interface)可以看出来），其中：颜色包括红色、绿色、蓝色和黄色；形状包括圆形、星形、方形和三角形；数目包括1、2、3和4。
+
+### 测评规则
+
+对于每一张测试卡片而言，都存在多张备选卡片在某个特征上与之相同（如图\@ref(fig:interface)中第一、三、四张备选卡片分别与测试卡片有相同的形状、颜色、数目）。但是每次选择都会要求根据某个确定好的特征（即颜色、形状或数目中的一个，称为**当前匹配特征**）进行判断，因此实际只有一张卡片是正确的。而测评中当前匹配特征需要用户根据反馈自己判断，而不是在界面上显示出来。
 
 # 后台配置
 
