Add a special rule to avoid two correct options when the result is 5

--- a/content/post/01303_calculator.Rmd
+++ b/content/post/01303_calculator.Rmd
@@ -70,7 +70,8 @@ SDK <- 999
 
 * 选项1：设被减数和减数的十位数之差为$X$，被减数和减数的个位数之差为$Y$（注意可能为负数），正确答案为$Z$。
 
-    + 若$X = 0$且$Y > 0$[^1]，则选项1为$10 - Y$。
+    + 若$X = 0$且$Y > 0$[^1]且$Y \neq 5$，则选项1为$10 - Y$。
+    + 若$X = 0$且$Y = 5$，则选项1为6。
     + 若$X > 0$且$Y \neq 0$，则选项1为$Z - 2Y$。
     + 若$X > 0$且$Y = 0$，则选项1为$Z + [Z / 10]$[^2]。
 
@@ -83,7 +84,8 @@ SDK <- 999
 
     + 若$Z$是两位数，则选项3为$Z - 10$。
     + 若$Z$是一位数且$Y > 0$，则选项3为$20 - Y$。
-    + 若$Z$是一位数且$Y < 0$，则选项3为$10 - Z$。
+    + 若$Z$是一位数且$Y < 0$且$Z \neq 5$，则选项3为$10 - Z$。
+    + 若$Z$是一位数且$Y < 0$且$Z = 5$，则选项3为6。
 
 ## 流程
 
