--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -72,7 +72,6 @@ knitr::kable(
 )
 ```
 
-
 ### 测评规则
 
 对于每一张测试卡片而言，都存在多张备选卡片在某个特征上与之相同（如图\@ref(fig:interface)中第一、三、四张备选卡片分别与测试卡片有相同的形状、颜色、数目）。但是每次选择都会要求根据某个确定好的特征（即颜色、形状或数目中的一个，称为**当前匹配特征**）进行判断，因此实际只有一张卡片是正确的。
@@ -80,6 +79,14 @@ knitr::kable(
 正式测评时候，**不会**提示当前匹配特征是什么，只需要直接反馈用户每次选择是否正确即可——这样用户就要根据这个反馈来确定当前匹配特征。每当用户在当前匹配特征下累计正确完成6次后，当前匹配特征就要改变，但是仍然**不会**提示用户当前匹配特征已改变。当用户正确完成“**颜色-形状-数目-颜色-形状-数目**”的六轮测评后，或者所有的48张卡片已经用完时，测评结束。
 
 所有的卡片都按相同的伪随机顺序呈现，见[序列文件](seq/05501_WCST.json){target="_blank"}。序列文件仅包含了由`id`字段，说明了先后呈现的48张卡片的编号（使用逗号`,`分割）。
+
+### 卡片呈现
+
+整个测评过程中，四张备选卡片始终呈现在页面下方。单个试次的卡片呈现过程如下：
+
+1. **卡片出现**。但张卡片的**最大呈现时间**为`5`秒，用户必须在卡片出现后的`5`秒内尽快作答（使用鼠标点击或触碰所要选择的卡片）。
+1. **反馈**。用户作答或达到最大呈现时间后，卡片立即消失，进入长达`1`秒的反馈时间，告诉用户回答正确还是错误，伴有声音反馈和视觉反馈。
+1. **空白**。反馈结束后，界面上只留下备选卡片（此时不允许对备选卡片进行操作），经过`500`毫秒后，进入下一个试次。
 
 # 后台配置
 
