--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -7,7 +7,7 @@ date: 2018-05-17
 slug: 05501-WCST # code-English name
 # specific parameters for current task
 code: "05501"
-sdk: 999
+sdk: 304
 # hugo taxonomy related
 tasknames: "威斯康辛卡片分类"
 categories:
@@ -93,23 +93,23 @@ knitr::kable(
 ## 游戏参数
 
 ```{r configs, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "configs.csv")
-#   ),
-#   caption = "配置参数总表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("data", "config", NAME_EN, "configs.csv")
+  ),
+  caption = "配置参数总表"
+)
 ```
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表[^std]"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("data", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表[^std]"
+)
 ```
 
 [^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。
@@ -117,10 +117,10 @@ knitr::kable(
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("data", "config", NAME_EN, "sdk.csv")
+  ),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
