--- a/content/post/042XX_cancellation.Rmd
+++ b/content/post/042XX_cancellation.Rmd
@@ -33,7 +33,7 @@ SDK <- rmarkdown::metadata$sdk
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：划消测验包含5个经典语言相关的任务，即**符号判断**（`04201`）、**字形判断**（`04202`）、**声调判断**（`04203`）、**词语判断**（`04204`）和**语义判断**（`04205`）。
+* **任务描述**：划消测验包含6个经典语言相关的任务，即**符号判断**（`04201`）、**字形判断**（`04202`）、**声调判断**（`04203`）、**词语判断**（`04204`）、**语义判断**（`04205`）和**拼音判断**（`04206`）。
 * **测查能力**：语言/反应力-言语速度
 <!-- * **相关任务**： -->
 
