--- a/content/post/01303_calculator.Rmd
+++ b/content/post/01303_calculator.Rmd
@@ -111,7 +111,7 @@ SDK <- 999
 # 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
@@ -126,13 +126,13 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 表\@ref(tab:recording-variables)说明了对于每一对数字需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "sdk.csv")),
              caption = paste0("传入参数（算分码：`", SDK, "`）"))
 ```
