--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -68,7 +68,7 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 # 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
@@ -84,7 +84,7 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 * 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
@@ -94,5 +94,5 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
 * 传入参数：
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")))
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "sdk.csv")))
 ```
