--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -89,7 +89,7 @@ VER <- "V4"
 # 配置参数
 
 ```{r configs, echo=FALSE, message=FALSE, warning=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "configs.csv")),
              caption = "配置参数总表")
 ```
 
@@ -101,13 +101,13 @@ knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv"
 * 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
-knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
              caption = "原始数据变量列表")
 ```
 
 # 试题算分（待定）
 
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-# knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
+# knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "sdk.csv")),
 #              caption = paste0("传入参数（算分码：`", SDK, "`）"))
 ```
