--- a/content/resources/rmarkdown/templates/iquizoo_document/skeleton/skeleton.Rmd
+++ b/content/resources/rmarkdown/templates/iquizoo_document/skeleton/skeleton.Rmd
@@ -48,7 +48,7 @@ SDK <- rmarkdown::metadata$sdk
 ```{r configs, echo=FALSE, message=FALSE}
 # knitr::kable(
 #   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "configs.csv")
+#     here::here("content", "resources", "config", NAME_EN, "configs.csv")
 #   ),
 #   caption = "配置参数总表"
 # )
@@ -59,7 +59,7 @@ SDK <- rmarkdown::metadata$sdk
 ```{r recording-variables, echo=FALSE, message=FALSE}
 # knitr::kable(
 #   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "recs.csv")
+#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
 #   ),
 #   caption = "原始数据变量列表[^std]"
 # )
@@ -72,7 +72,7 @@ SDK <- rmarkdown::metadata$sdk
 ```{r sdk-score, echo=FALSE, message=FALSE}
 # knitr::kable(
 #   readr::read_csv(
-#     here::here("data", "config", NAME_EN, "sdk.csv")
+#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
 #   ),
 #   caption = paste0("传入参数（算分码：`", SDK, "`）")
 # )
