--- a/content/post/06301_StopSignal.Rmd
+++ b/content/post/06301_StopSignal.Rmd
@@ -38,7 +38,7 @@ SDK <- rmarkdown::metadata$sdk
 
 ## 基本逻辑
 
-在每一个试次中，界面中出现一个类似红绿灯中的绿色小人的图片，小人或者朝左、或者朝右，用户需要快速判断小人的朝向，并做出相应的操作。但是，在小部分的试次中，类似红绿灯中的绿色小人会变成红色小人，用户需要在这些试次避免做出任何操作。
+在每一个试次中，界面中出现一个类似红绿灯中的绿色小人的图片，小人或者朝左、或者朝右，用户需要快速判断小人的朝向，并做出相应的操作。但是，在小部分的试次中，绿色小人会变成红色小人，用户需要在这些试次避免做出任何操作。
 
 ## 详细说明
 
