--- a/content/post/08201_WxPredict.Rmd
+++ b/content/post/08201_WxPredict.Rmd
@@ -7,7 +7,7 @@ date: 2018-08-22 # format 2006-01-01
 slug: 08201-wxpredict # code-English name
 # specific parameters for current task
 code: "08201"
-sdk:
+sdk: 100
 # hugo taxonomy related
 tasknames: 概率分类学习范式
 categories: 文档
@@ -85,34 +85,32 @@ knitr::kable(
 ## 游戏参数
 
 ```{r configs, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "configs.csv")
-#   ),
-#   caption = "配置参数总表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "configs.csv")
+  ),
+  caption = "配置参数总表"
+)
 ```
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表[^std]"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
-
-<!-- [^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。 -->
 
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "sdk.csv")
+  ),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
