Fix the incorrect SSD adaption rule

--- a/content/post/06301_StopSignal.Rmd
+++ b/content/post/06301_StopSignal.Rmd
@@ -52,7 +52,7 @@ SDK <- rmarkdown::metadata$sdk
     * 如果不需要变成红色，那么等待用户做出判断；
     * 如果需要变成红色，那么设置一个变量`ssd`来确定变红的时间，即绿色小人出现后`ssd`毫秒后变成红色。`ssd`的具体设置如下：
         + 如果是第一次变成红色，则设置`ssd`与配置参数`ssdInit`（默认为250，单位毫秒）相同；
-        + 如果不是第一次变成红色，则`ssd`根据上一次是否成功抑制进行调整，如果上次绿色小人变红时用户成功抑制操作，则`ssd`减少50；否则增加50。
+        + 如果不是第一次变成红色，则`ssd`根据上一次是否成功抑制进行调整，如果上次绿色小人变红时用户成功抑制操作，则`ssd`增加50；否则减少50。
 1. 用户完成操作或小人显示时间达到1秒（配置参数`maxSt`可以配置此参数）后，小人消失。
 1. 对用户的操作进行反馈，反馈显示时间为200毫秒。
 
