--- a/content/post/08201_MotionPrediction.Rmd
+++ b/content/post/08201_MotionPrediction.Rmd
@@ -7,7 +7,7 @@ date: 2018-08-27 # format 2006-01-01
 slug: 08201-motionprediction # code-English name
 # specific parameters for current task
 code: "08201"
-sdk: 
+sdk:
 # hugo taxonomy related
 tasknames: 运动预测
 categories: 文档
@@ -31,9 +31,8 @@ SDK <- rmarkdown::metadata$sdk
 * **显示名称**：`r NAME_CN`
 * **英文名称**：`r NAME_EN`
 * **题目编号**：`r CODE`
-* **任务描述**：
-* **测查能力**：
-* **相关任务**：
+* **任务描述**：测查感知觉能力，特别是对运动的知觉能力。
+* **测查能力**：感知觉-运动知觉
 
 # 前端交互
 
