Add task flow description

--- a/content/post/08301_MotionPrediction.Rmd
+++ b/content/post/08301_MotionPrediction.Rmd
@@ -46,7 +46,14 @@ knitr::include_graphics("/images/MotionPrediction/interface.png")
 
 ## 详细说明
 
-待完善。
+### 流程细节
+
+每一个试次中都包含以下流程：
+
+1. 乌龟和兔子出现并开始赛跑，跑动时间为1.5秒。此时屏幕右侧供选择用的按钮不出现。
+1. 乌龟和兔子消失，同时屏幕右侧供选择用的按钮出现。用户需要触摸或按键盘上对应按键（上下键）确定赛跑的胜者。最长等待用户选择的时间为1.5秒。
+1. 用户做出操作或达到最长等待时间后，呈现反馈。若用户判断正确，则呈现一张笑脸；若错误，则呈现一张皱眉的脸；若未选择，则呈现带问号的脸。呈现时间为1秒。
+1. 试次间间隔时间0.5秒内呈现空白屏幕。
 
 # 后台配置
 
