--- a/content/post/08301_MotionPrediction.Rmd
+++ b/content/post/08301_MotionPrediction.Rmd
@@ -55,6 +55,25 @@ knitr::include_graphics("/images/MotionPrediction/interface.png")
 1. 用户做出操作或达到最长等待时间后，呈现反馈。若用户判断正确，则呈现一张笑脸；若错误，则呈现一张皱眉的脸；若未选择，则呈现带问号的脸。呈现时间为1秒。
 1. 试次间间隔时间0.5秒内呈现空白屏幕。
 
+### 序列规则
+
+[序列](/seq/08301_MotionPrediction.json){target="_blank"}中包含以下字段：
+
+* `dist_rabbit`：起始时兔子与终点的距离。注意此处把离终点最远的位置定义为1000（如图\@ref(fig:interface)），下同。
+* `dist_tortoise`：起始时乌龟与终点的距离。
+* `winner`：本次比赛的胜者。`Rabbit`表示兔子，`Tortoise`表示乌龟。
+* `time_winner`：本次比赛胜者到达终点所需时间，单位为秒。
+
+在序列中只给出了胜者到达终点所需时间，所以需要注意的有两点：
+
+1. 需要根据`time_winner`和对应的胜者来计算胜者的移动速度。
+1. 输者到达终点所需时间遵循以下规则：
+    * 第一个试次输者到达终点所需时间为第一个试次的`time_winner`加上配置参数`timeInit`（默认为`500`，单位毫秒）的值，注意单位。此处的`timeInit`即为输者与胜者的时间差。
+    * 从第二个试次开始，输者到达终点所需时间需根据上一个试次是否正确来确定。
+        + 若回答正确，就把上一次输者与胜者的时间差**减少100毫秒**作为本次的时间差（即难度增加）；
+        + 若回答错误，就把上一次输者与胜者的时间差**增加100毫秒**作为本次的时间差（即难度降低）；
+        + 若未作答，就把上一次输者与胜者的时间差直接作为本次的时间差（即难度不改变）。
+
 # 后台配置
 
 ## 游戏参数
