Polish words of sequence rule description

--- a/content/post/08301_MotionPrediction.Rmd
+++ b/content/post/08301_MotionPrediction.Rmd
@@ -66,8 +66,8 @@ knitr::include_graphics("/images/MotionPrediction/interface.png")
 
 在序列中只给出了胜者到达终点所需时间，所以需要注意的有两点：
 
-1. 需要根据`time_winner`和对应的胜者来计算胜者的移动速度。
-1. 输者到达终点所需时间遵循以下规则：
+1. 需要根据胜者到达终点所需时间和对应的胜者来计算胜者的移动速度。
+1. 需要根据输者到达终点所需时间和对应的输者来计算输者的移动速度。输者到达终点所需时间遵循以下规则：
     * 第一个试次输者到达终点所需时间为第一个试次的`time_winner`加上配置参数`timeInit`（默认为`500`，单位毫秒）的值，注意单位。此处的`timeInit`即为输者与胜者的时间差。
     * 从第二个试次开始，输者到达终点所需时间需根据上一个试次是否正确来确定。
         + 若回答正确，就把上一次输者与胜者的时间差**减少100毫秒**作为本次的时间差（即难度增加）；
