Change the unit of `time_winner` field in sequence to `millisecond`

--- a/content/post/08301_MotionPrediction.Rmd
+++ b/content/post/08301_MotionPrediction.Rmd
@@ -62,13 +62,13 @@ knitr::include_graphics("/images/MotionPrediction/interface.png")
 * `dist_rabbit`：起始时兔子与终点的距离。注意此处把离终点最远的位置定义为1000（如图\@ref(fig:interface)），下同。
 * `dist_tortoise`：起始时乌龟与终点的距离。
 * `winner`：本次比赛的胜者。`Rabbit`表示兔子，`Tortoise`表示乌龟。
-* `time_winner`：本次比赛胜者到达终点所需时间，单位为秒。
+* `time_winner`：本次比赛胜者到达终点所需时间，单位为毫秒。
 
 在序列中只给出了胜者到达终点所需时间，所以需要注意的有两点：
 
 1. 需要根据胜者到达终点所需时间和对应的胜者来计算胜者的移动速度。
 1. 需要根据输者到达终点所需时间和对应的输者来计算输者的移动速度。输者到达终点所需时间遵循以下规则：
-    * 第一个试次输者到达终点所需时间为第一个试次的`time_winner`加上配置参数`timeInit`（默认为`500`，单位毫秒）的值，注意单位。此处的`timeInit`即为输者与胜者的时间差。
+    * 第一个试次输者到达终点所需时间为第一个试次的`time_winner`加上配置参数`timeInit`（默认为`500`，单位毫秒）的值。此处的`timeInit`即为输者与胜者的时间差。
     * 从第二个试次开始，输者到达终点所需时间需根据上一个试次是否正确来确定。
         + 若回答正确，就把上一次输者与胜者的时间差**减少100毫秒**作为本次的时间差（即难度增加）；
         + 若回答错误，就把上一次输者与胜者的时间差**增加100毫秒**作为本次的时间差（即难度降低）；
