--- a/content/post/08301_MotionPrediction.Rmd
+++ b/content/post/08301_MotionPrediction.Rmd
@@ -7,7 +7,7 @@ date: 2018-08-27 # format 2006-01-01
 slug: 08301-motionprediction # code-English name
 # specific parameters for current task
 code: "08301"
-sdk:
+sdk: 205
 # hugo taxonomy related
 tasknames: 运动预测
 categories: 文档
@@ -79,32 +79,32 @@ knitr::include_graphics("/images/MotionPrediction/interface.png")
 ## 游戏参数
 
 ```{r configs, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "configs.csv")
-#   ),
-#   caption = "配置参数总表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "configs.csv")
+  ),
+  caption = "配置参数总表"
+)
 ```
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
 
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "sdk.csv")
+  ),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
