Add details on the procedure and sequence

--- a/content/post/08401_JLO.Rmd
+++ b/content/post/08401_JLO.Rmd
@@ -47,7 +47,20 @@ knitr::include_graphics(path = "/images/JLO/interface.png")
 
 ## 详细说明
 
-待完善。
+每一个试次中，都包含以下流程：
+
+1. 两条线段出现，同时下方呈现左旋转和右旋转按钮，分别表示逆时针旋转和顺时针旋转（见图\@ref(fig:interface)）。两条线段中一条为黑色，另一条为红色。其中，
+    * 两条线段位置随机，但是中点的距离不变（界面设计时设置一个合适的值）。
+    * 黑色线段不能旋转，而红色线段可以操作旋转。
+    * 黑色线段长度固定（界面设计时设置一个合适的值），而红色线段的长度可变（由序列设置）。
+1. 用户使用鼠标点击（或者触摸）下方的按钮以旋转红色线段。用户每次操作都会将线段旋转6&deg;。旋转过一次之后下方就会出现“完成”按钮，且当用户确定自己旋转到两条线段平行的位置时，需单击（或者触摸）“完成”按钮方可结束本试次。注意两条线段的夹角和相对方向由序列设置。
+1. 用户点击“完成”后，0.5秒的短暂空白屏幕后，进入下一个试次。
+
+[序列](`r stringr::str_glue("/seq/{CODE}_{NAME_EN}.json")`){target="_blank"}中包含以下信息：
+
+* `rotation`：用户实际需要旋转的次数。注意线段**每次旋转6&deg;**。例如：假设需要旋转9次，则线段间的夹角则为$6^{\circ}\times9=54^{\circ}$。
+* `direction`：用户实际需要旋转的方向。使用`Left`和`Right`分别表示左、右按钮，且左按钮表示逆时针旋转，右按钮表示顺时针旋转（见图\@ref(fig:interface)）。结合`rotation`共同决定了红色线段和黑色线段的实际相对方向。
+* `length`：红色线段相对黑色线段的长度。注意黑色线段的长度不会变化。
 
 # 后台配置
 
