--- a/content/post/08401_JLO.Rmd
+++ b/content/post/08401_JLO.Rmd
@@ -67,32 +67,32 @@ knitr::include_graphics(path = "/images/JLO/interface.png")
 ## 游戏参数
 
 ```{r configs, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "configs.csv")
-#   ),
-#   caption = "配置参数总表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "configs.csv")
+  ),
+  caption = "配置参数总表"
+)
 ```
 
 ## 数据记录
 
 ```{r recording-variables, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "recs.csv")
-#   ),
-#   caption = "原始数据变量列表"
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "recs.csv")
+  ),
+  caption = "原始数据变量列表"
+)
 ```
 
 ## 试题算分
 
 ```{r sdk-score, echo=FALSE, message=FALSE}
-# knitr::kable(
-#   readr::read_csv(
-#     here::here("content", "resources", "config", NAME_EN, "sdk.csv")
-#   ),
-#   caption = paste0("传入参数（算分码：`", SDK, "`）")
-# )
+knitr::kable(
+  readr::read_csv(
+    here::here("content", "resources", "config", NAME_EN, "sdk.csv")
+  ),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
