--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -84,7 +84,7 @@ knitr::kable(
 
 整个测评过程中，四张备选卡片始终呈现在页面下方。单个试次的卡片呈现过程如下：
 
-1. **卡片出现**。但张卡片的**最大呈现时间**为`5`秒，用户必须在卡片出现后的`5`秒内尽快作答（使用鼠标点击或触碰所要选择的卡片）。
+1. **卡片出现**。单张卡片的**最大呈现时间**为`5`秒，用户必须在卡片出现后的`5`秒内尽快作答（使用鼠标点击或触碰所要选择的卡片）。
 1. **反馈**。用户作答或达到最大呈现时间后，卡片立即消失，进入长达`1`秒的反馈时间，告诉用户回答正确还是错误，伴有声音反馈和视觉反馈。
 1. **空白**。反馈结束后，界面上只留下备选卡片（此时不允许对备选卡片进行操作），经过`500`毫秒后，进入下一个试次。
 
