Enhance task flow

--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -76,7 +76,7 @@ knitr::kable(
 
 对于每一张测试卡片而言，都存在多张备选卡片在某个特征上与之相同（如图\@ref(fig:interface)中第一、三、四张备选卡片分别与测试卡片有相同的形状、颜色、数目）。但是每次选择都会要求根据某个确定好的特征（即颜色、形状或数目中的一个，称为**当前匹配特征**）进行判断，因此实际只有一张卡片是正确的。
 
-正式测评时候，**不会**提示当前匹配特征是什么，只需要直接反馈用户每次选择是否正确即可——这样用户就要根据这个反馈来确定当前匹配特征。每当用户在当前匹配特征下累计正确完成6次后，当前匹配特征就要改变，但是仍然**不会**提示用户当前匹配特征已改变。当用户正确完成“**颜色-形状-数目-颜色-形状-数目**”的六轮测评后，或者所有的48张卡片已经用完时，测评结束。
+正式测评时候，**不会**提示当前匹配特征是什么，只需要直接反馈用户每次选择是否正确即可——这样用户就要根据这个反馈来确定当前匹配特征。每当用户在当前匹配特征下累计正确完成6次后，**提示**用户当前匹配特征已改变（提示显示时间为2秒）。提示后若用户还按原来的规则判断，则记一次**固着错误**（perservative error）；用户不用原来规则答题时，若用户的选择没有合适的新规则（颜色、形状或数目中的一个），则记一次**普通的错误**；直到用户的选择**既不是原来的规则也有合适的新规则**时，判断用户正确，并把这个新规则作为下一个规则。这个新规则累计正确完成6次后，重复上面的步骤。当用户正确完成的六轮不同的规则，或者所有的48张卡片已经用完时，测评结束。
 
 所有的卡片都按相同的伪随机顺序呈现，见[序列文件](/seq/05501_WCST.json){target="_blank"}。序列文件仅包含了由`id`字段，说明了先后呈现的48张卡片的编号（使用逗号`,`分割）。
 
