--- a/content/post/05501_WCST.Rmd
+++ b/content/post/05501_WCST.Rmd
@@ -76,7 +76,12 @@ knitr::kable(
 
 对于每一张测试卡片而言，都存在多张备选卡片在某个特征上与之相同（如图\@ref(fig:interface)中第一、三、四张备选卡片分别与测试卡片有相同的形状、颜色、数目）。但是每次选择都会要求根据某个确定好的特征（即颜色、形状或数目中的一个，称为**当前匹配特征**）进行判断，因此实际只有一张卡片是正确的。
 
-正式测评时候，**不会**提示当前匹配特征是什么，只需要直接反馈用户每次选择是否正确即可——这样用户就要根据这个反馈来确定当前匹配特征。每当用户在当前匹配特征下**连续正确完成6次**后，**提示**用户当前匹配特征已改变（提示显示时间为2秒）。提示后若用户还按原来的规则判断，则记一次**固着错误**（perservative error）；用户不用原来规则答题时，若用户的选择没有合适的新规则（颜色、形状或数目中的一个），则记一次**普通的错误**；直到用户的选择**既不是原来的规则也有合适的新规则**时，判断用户正确，并把这个新规则作为下一个规则。这个新规则**连续正确完成6次**后，重复上面的步骤。当用户正确完成的六轮不同的规则，或者所有的48张卡片已经用完时，测评结束。
+正式测评时候，**不会**提示当前匹配特征是什么，只需要直接反馈用户每次选择是否正确即可——这样用户就要根据这个反馈来确定当前匹配特征。具体来说：
+
+1. 第一轮的规则需要用户自己去确定。用户的第一个选择若没有合适的规则（无论颜色、形状或数目），则记一次错误，并且一直重复到用户选择到了有合适的规则的卡片，并将该规则作为第一轮的规则。
+1. 用户在每一轮规则下**连续正确完成6次**后，**提示**用户当前匹配特征已改变（提示显示时间为2秒）。
+1. 提示后若用户还按原来的规则判断，则记一次**固着错误**（perservative error）；用户不用原来规则答题时，若用户的选择没有合适的新规则（颜色、形状或数目中的一个），则记一次**普通的错误**；直到用户的选择**既不是原来的规则也有合适的新规则**时，判断用户正确，并把这个新规则作为下一个规则。
+1. 当用户正确完成的六轮不同的规则，或者所有的48张卡片已经用完时，测评结束。
 
 这里说明一下关于**固着错误**的定义。固着错误，也就是用户在规则改变后仍然按照原来的规则作答所犯的错误。所以只要在规则转换后直到下一次规则转换前，只要用户有按照上一次的规则作答，就要判断为固着错误。
 
