Complete scoring descriptions

--- a/content/scoring.Rmd
+++ b/content/scoring.Rmd
@@ -2,6 +2,10 @@
 title: 算分流程
 ---
 
+```{r include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
+
 # 概述
 
 需要区分三种算分：
@@ -21,10 +25,26 @@ title: 算分流程
 * 标准分（此处用$T$表示）
 : 根据题目的原始分和该题目的相应[**常模**](/glossary#常模)计算而来。计算时需根据用户的年龄、性别（如果存在）等信息，获得用户所在用户组的平均得分（此处用$\mu$表示）和标准差（此处用$\sigma$表示），然后基于公式$T = (X - \mu) / \sigma * 15 + 100$算出标准分$T$。
 
-**注意**：
+### 注意
 
 由于原始分将被引入报告中，而根据科学研究结果计算出的原始分有很大的变异性，所以需要将这个分数转变到一个标准的尺度上（目前定为0-1000）以便于用户的阅读。转换方式为：**（原始分 - 题目最低分数）/（题目最高分数 - 题目最低分数） * 1000**。
 
-## 单个能力得分
+## 单个能力和单个试卷得分
 
-简而言之，单个能力得分是将试卷中用户所有当前能力的题目标准分的加权平均。
+简而言之，单个能力和单个试卷得分是将试卷中用户所有当前能力的题目标准分的[**加权平均**](https://baike.baidu.com/item/加权平均值)。为了简单起见，下面我们以一个包含3个能力，每个能力包含2个子能力、每个子能力包含1-2个测评题目的试卷为例子（如下图为结构）进行说明。
+
+```{r}
+DiagrammeR::grViz(
+  here::here("content", "resources", "config", "scoring.gv")
+)
+```
+
+从图中可以看出来，配置试卷的权重时会有三种权重，即**能力权重**、**子能力权重**和**题目权重**。子能力得分是相应子能力的题目得分的加权平均，例如：
+
+$$ 子能力1的得分 = \frac{题1\times题1的权重 + 题2\times题2的权重}{题1的权重 + 题2的权重} $$
+
+同样的能力得分则是相应子能力得分的加权平均，而试卷的总分则是试卷中所有能力得分的加权平均。
+
+### 注意
+
+值得一提的是，如果部分题目、部分子能力或者部分能力有分数缺失现象，计算分数的方法值得讨论。目前的方法是，在加权平均时直接去掉缺失的题目、子能力或者能力（即修改权重为0），避免最后的分数过低。
