--- a/content/scoring.Rmd
+++ b/content/scoring.Rmd
@@ -8,17 +8,16 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # 概述
 
-需要区分三种算分：
+需要区分两种算分：
 
-1. 单个题目的算分
-1. 单个能力的算分
-1. 单个试卷的算分
+1. 测评题目的算分
+1. 能力和试卷的算分
 
-这三种算分之间有一定的层级关系，即单个题目的算分是单个能力的算分的基础，而单个能力的算分则是单个试卷的算分的基础。下面分别说明。
+测评题目算分是能力和试卷算分的基础，它们有着完全不同的计算方式。下面详细说明。
 
-## 单个题目算分
+## 测评题目算分
 
-单个题目算分是所有算分的基础。单个题目有两个最终分数，即**原始分**和**标准分**。
+测评题目算分是所有算分的基础。单个题目有两个最终分数，即**原始分**和**标准分**。
 
 * 原始分（此处用$X$表示）
 : 根据当前题目在以往研究中的应用，总结出基于用户对当前题目的所有反应的记录数据而计算出来的基本分数。这个计算方式会在单个文档的算分部分进行详细说明（未来计划）。
@@ -29,9 +28,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 由于原始分将被引入报告中，而根据科学研究结果计算出的原始分有很大的变异性，所以需要将这个分数转变到一个标准的尺度上（目前定为0-1000）以便于用户的阅读。转换方式为：**（原始分 - 题目最低分数）/（题目最高分数 - 题目最低分数） * 1000**。
 
-## 单个能力和单个试卷得分
+## 能力和试卷得分
 
-简而言之，单个能力和单个试卷得分是将试卷中用户所有当前能力的题目标准分的[**加权平均**](https://baike.baidu.com/item/加权平均值)。为了简单起见，下面我们以一个包含3个能力，每个能力包含2个子能力、每个子能力包含1-2个测评题目的试卷为例子（如下图为结构）进行说明。
+简而言之，能力和试卷得分是试卷中对应题目的标准分的[**加权平均**](https://baike.baidu.com/item/加权平均值)。为了简单起见，下面我们以一个包含3个能力，每个能力包含2个子能力、每个子能力包含1-2个测评题目的试卷为例子（如下图为结构）进行说明。
 
 ```{r}
 DiagrammeR::grViz(
@@ -47,4 +46,4 @@ $$ 子能力1的得分 = \frac{题1\times题1的权重 + 题2\times题2的权重
 
 ### 注意
 
-值得一提的是，如果部分题目、部分子能力或者部分能力有分数缺失现象，计算分数的方法值得讨论。目前的方法是，在加权平均时直接去掉缺失的题目、子能力或者能力（即修改权重为0），避免最后的分数过低。
+值得一提的是，如果部分题目、部分子能力或者部分能力有分数缺失的情况，计算分数时需要进行特殊处理。目前的方法是，在加权平均时直接去掉缺失的题目、子能力或者能力的得分（即修改权重为0），避免最后的分数过低。
