--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -6,7 +6,6 @@ slug: 06901-filtering
 code: "06901"
 tasknames: "干扰排除范式"
 categories: "文档"
-bibliography: ../resources/refs/MyFullResearch.bib
 link-citations: true
 output:
   blogdown::html_page:
@@ -57,7 +56,7 @@ knitr::include_graphics("/images/Filtering/taskflow.png")
 
 ## 刺激
 
-本题目的刺激是刺激阵列，即由多个元素组成[@Ophir2009]。其中包含两类元素：
+本题目的刺激是刺激阵列，即由多个元素组成。其中包含两类元素：
 
 1. **黄色糖果**。这是需要用户**注意**的刺激元素。
 1. **绿色糖果**。这是需要用户**忽略**的刺激元素。
@@ -122,5 +121,3 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 ```
 
 # 修订历史
-
-# 参考文献
