--- a/content/post/00201_digital.Rmd
+++ b/content/post/00201_digital.Rmd
@@ -35,7 +35,7 @@ SDK <- rmarkdown::metadata$sdk
 * **题目编号**：`r CODE`
 * **任务描述**：测查记忆力，特别是个体能够在言语材料短时呈现后立即回忆出来的能力。
 * **测查能力**：记忆力-短时记忆
-* **相关任务**：[位置记忆](`r blogdown::shortcode("relref", "00301_spatialSpan.html")`)、[倒背数](`r blogdown::shortcode("relref", "00202_digitalDesc.html")`)
+* **相关任务**：[位置记忆](`r blogdown::shortcode("relref", "00301_spatialSpan")`)、[倒背数](`r blogdown::shortcode("relref", "00202_digitalDesc")`)
 
 # 前端交互
 
@@ -71,7 +71,7 @@ knitr::kable(
 )
 ```
 
-[^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。
+[^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard")`)。
 
 ## 试题算分
 
