--- a/content/post/01303_calculator.Rmd
+++ b/content/post/01303_calculator.Rmd
@@ -45,7 +45,7 @@ SDK <- 999
 
 `r blogdown::shortcode("directoryindex", path = "/static/seq/01303_calculator", pathURL = "/seq/01303_calculator")`
 
-其中（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于序列格式的说明）：
+其中（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于序列格式的说明）：
 
 * `run`：表示轮次（请查看[流程][]）。序列文件中专有。
 * `type`：计算法则。`add`：加法，`minus`：减法。
@@ -123,7 +123,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 
 ## 提交数据
 
-表\@ref(tab:recording-variables)说明了对于每一对数字需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
+表\@ref(tab:recording-variables)说明了对于每一对数字需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard")`)）。
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
