--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -81,7 +81,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 
 ## 提交数据
 
-* 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+* 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
