--- a/content/post/02901_numberStroop.Rmd
+++ b/content/post/02901_numberStroop.Rmd
@@ -34,7 +34,7 @@ SDK <- 201
 
 ## 序列配置
 
-序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。[序列](/seq/02901_numberStroop.json)中各个元素的意义：
+序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard")`)。[序列](/seq/02901_numberStroop.json)中各个元素的意义：
 
 * `length`：序列的长度
 * `nleft`：左侧呈现的数字
@@ -53,7 +53,7 @@ SDK <- 201
 
 ## 数据提交
 
-表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）。
+表\@ref(tab:recording-variables)说明了对于每一个试次需要记录的数据（请参考[标准](`r blogdown::shortcode("relref", "standard")`)）。
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
