--- a/content/post/03501_pictureMemory.Rmd
+++ b/content/post/03501_pictureMemory.Rmd
@@ -77,7 +77,7 @@ VER <- "V4"
 
 ## 序列配置
 
-序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
+序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard")`)。序列中各个元素的意义：
 
 * `phase`：阶段。即此序列属于学习阶段（`Learn`）还是测试阶段（`Test`）。
 * `id`：图片的编号。请注意本题目图片的命名方式是三位数编号加上字母a或者b（a，b的意义即在[刺激][]一节里提到的单个图片的不同版本）。所有不足三位数的编号均在前面加了相应数目的0，如编号为`1`则命名时采用`001`。`id`和`ver`共同决定了实际应该选择哪张图片。
@@ -98,7 +98,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 * 题目结果显示
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
+* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
