--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -69,7 +69,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 * 题目结果显示
     + 显示获得的奖励分数和成功兑换奖励的气球个数
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
+* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
