--- a/content/post/05201_RunningMemory.Rmd
+++ b/content/post/05201_RunningMemory.Rmd
@@ -41,7 +41,7 @@ VER <- "V4"
     + 正式测评总计12个试次，即每种4个试次。
     + 练习总计3次，即每种1次。
 
-* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
     + 本题目只有一种序列，因此传输序列的[`json`](http://json.org/)字符串仅包含一个由两个`名称/值`配对组成的对象。
         - `prac`: 练习阶段的3个序列。
         - `test`: 正式测试阶段的12个序列。
@@ -58,7 +58,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 * 题目结果显示
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard.html")`)中关于格式的说明）
+* 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
