--- a/content/post/05401_symbolMemory.Rmd
+++ b/content/post/05401_symbolMemory.Rmd
@@ -35,7 +35,7 @@ SDK <- rmarkdown::metadata$sdk
 * **题目编号**：`r CODE`
 * **任务描述**：测查记忆力，特别是个体记住各种符号的能力。
 * **测查能力**：记忆力-语义记忆
-* **相关任务**：[图片记忆](`r blogdown::shortcode("relref", "03501_pictureMemory.html")`)。
+* **相关任务**：[图片记忆](`r blogdown::shortcode("relref", "03501_pictureMemory")`)。
 
 # 前端交互
 
@@ -71,7 +71,7 @@ knitr::kable(
 )
 ```
 
-[^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。
+[^std]: 请参考[标准](`r blogdown::shortcode("relref", "standard")`)。
 
 ## 试题算分
 
