--- a/content/post/06901_Filtering.Rmd
+++ b/content/post/06901_Filtering.Rmd
@@ -85,7 +85,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 
 ## 序列配置
 
-序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)。序列中各个元素的意义：
+序列配置规则请参考[标准](`r blogdown::shortcode("relref", "standard")`)。序列中各个元素的意义：
 
 * `length`：序列的长度
 * `id`：刺激阵列（参考表\@ref(tab:stimuli)）的编号（1-10）。
@@ -106,7 +106,7 @@ knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_E
 * 题目结果显示
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
+* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard")`)）
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(readr::read_csv(here::here("content", "resources", "config", NAME_EN, "recs.csv")),
