Add scoring technical details for five new tests

--- a/content/post/08501_ProtectEarth.Rmd
+++ b/content/post/08501_ProtectEarth.Rmd
@@ -1,6 +1,6 @@
 ---
 # heading of document
-title: 保卫地球（ProtectEarth） # Chinese name（English name）
+title: 阻挡陨石（ProtectEarth） # Chinese name（English name）
 author: 张亮
 date: 2018-11-06 # format 2006-01-01
 # slug
@@ -80,3 +80,11 @@ knitr::kable(
   caption = paste0("传入参数（算分码：`", SDK, "`）")
 )
 ```
+
+## 算分方法
+
+采用一个考虑了速度准确性权衡的指标。类似于`RCS`。规则：
+
+$$分数 = \frac{作答正确的个数}{整个测验的持续时间}$$
+
+注意整个测验的持续时间就是给用户的作答限时，且使用分钟作为单位。
