Add limitation for reaction time recording

--- a/content/post/00102_Flanker.Rmd
+++ b/content/post/00102_Flanker.Rmd
@@ -59,6 +59,6 @@ knitr::kable(
 
 $$score = PC + \frac{log_{10}(3000) - log_{10}(RT_{inc})}{log_{10}(3000) - log_{10}(500)}$$
 
-其中$PC$是用户整体的正确比例（未作答记为错误），$RT_{inc}$是用户在**不一致**条件**正确**作答时的反应时间的**中位数**，且以毫秒为单位。
+其中$PC$是用户整体的正确比例（未作答记为错误），$RT_{inc}$是用户在**不一致**条件**正确**作答时的反应时间的**中位数**，且以毫秒为单位。$RT_{inc}$的范围需要在500-3000内，小于500的修正为500，大于3000的修正为3000。
 
 原始分的取值范围为0~2。
