Change sequence rule

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -65,7 +65,11 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 <!-- TODO: CHANGE THESE TO NEWER VERSION -->
 
-每次需要追踪的萤火虫数目有5种可能（即3、4、5、6、7），不跟踪的萤火虫数目则始终为7个。每种可能的跟踪萤火虫情况分别出现2次，因而每个用户都累计会完成10次判断，同时保证10次判断的跟踪萤火虫数目是随机打乱了的。
+每次需要追踪的萤火虫数目有5种可能（即3、4、5、6、7），不跟踪的萤火虫数目则始终为7个。
+每次需要追踪（发光的）萤火虫数目遵从1 up 2 down的规则，即做对一次发光萤火虫的个数即增加一个，做错两次下一次中发光萤火虫的个数减少一个
+例：第n轮中x个（4）发光萤火虫，
+i）用户第n轮做对，n+1轮中发光萤火虫的个数变为x+1（5）；【1 up】
+Ii）用户第n轮做错，n+1中发光萤火虫的个数还是x（4），若n+1轮也做错，则n+2中发光萤火虫的个数变为x-1（3）；若n+1轮做对，n+2中发光萤火虫的个数变为x+1（5）。【2 down】
 
 # 配置参数
 
