change the sequence rule to the proper form

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -66,9 +66,9 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 <!-- TODO: CHANGE THESE TO NEWER VERSION -->
 
 每次需要追踪的萤火虫数目n根据用户之前的成绩自适应，不追踪的萤火虫数目保持n+3。每次需要追踪（发光的）萤火虫数目遵从1 up 2 down的规则，即当前试次做对，下一次发光萤火虫的个数增加一个；当前试次做错，下一次发光萤火虫的数目不改变；当前做错，下一次也做错，再下次中发光萤火虫的个数减少一个。
-* 例：第n轮中有x个（4）发光萤火虫
-  + 用户第n轮做对，n+1轮中发光萤火虫的个数变为x+1（5）；【1 up】
-  + 用户第n轮做错，n+1中发光萤火虫的个数还是x（4），若n+1轮也做错，则n+2中发光萤火虫的个数变为x-1（3）；若n+1轮做对，n+2中发光萤火虫的个数变为x+1（5）。【2 down】
+* 例：第1轮中有4发光萤火虫
+  + 用户第1轮做对，第2轮中发光萤火虫的个数变为5；【1 up】
+  + 用户第1轮做错，第2轮中发光萤火虫的个数还是4，若第2轮也做错，则第3轮中发光萤火虫的个数变为3；若第2轮做对，第3轮中发光萤火虫的个数变为5。【2 down】
 
 # 配置参数
 
