change task description and scoring rules

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -18,7 +18,7 @@ output:
 NAME_CN <- "森林中的萤火虫"
 NAME_EN <- "firefly"
 CODE <- "02102"
-SDK <- 999
+SDK <- 301
 ```
 
 # 基本信息
@@ -32,7 +32,7 @@ SDK <- 999
 
 # 交互界面
 
-夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（发光的个数3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
+夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数为发光的个数+2），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
 
 ```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE, out.width="80%"}
 knitr::include_graphics("/images/VSTM/firefly.png")
@@ -46,9 +46,9 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**，不发光的为**干扰刺激**，详细请看下方**刺激列表**。
 + **刺激呈现**
-    - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标开始闪烁，闪烁次数默认值为3次，每次闪烁时间默认值为`300 ms`。
-    - 闪烁结束，所有萤火虫开始飞舞，默认值为`3000 ms`，速度为30。
-    - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是之前闪烁过的萤火虫，用户点击次数需与目标个数一致，方可开始下一轮。
+    - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标刺激开始闪烁，闪烁次数默认值为3次，每次闪烁时间默认值为`300 ms`。首次出现目标刺激的个数定为3，目标刺激的下限为2，没有上限，即最少的闪烁萤火虫的个数为2。
+    - 闪烁结束，目标刺激与干扰刺激变得相同，所有萤火虫开始飞舞，默认值为`3000 ms`，速度为30。
+    - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是目标刺激（之前闪烁过的萤火虫），用户点击次数需与目标个数一致，方可开始下一轮。
     - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）默认值为`500 ms`。
 
 ## 操作
@@ -58,17 +58,22 @@ knitr::include_graphics("/images/VSTM/firefly.png")
     - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备鼠标点击进行操作。
 + **判断正误**：所有试次都需要操作，没有操作则使用`-1`表示正确与否。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
 + **反馈**
-    - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
-    - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）
+    - 引导练习：`需要`对*正确*和*错误*给出听觉和视觉反馈。
+    - 正式测试：`不需要`对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）；需要给用户做对个数的反馈，即正确点击的萤火虫的数量。
+
+```{r taskflow-image, fig.cap="反馈界面", fig.align='center', echo=FALSE, out.width="80%"}
+knitr::include_graphics("/images/VSTM/fireflyfeedback.png")
+```
 
 ## 序列配置
 
-<!-- TODO: CHANGE THESE TO NEWER VERSION -->
+每次目标刺激的数目根据用户之前的成绩进行自适应，干扰刺激数目保持目标刺激+2，遵循如下规则：当前试次做对，下一次目标刺激个数加一；当前试次做错，下一次目标刺激的数目不改变；当前做错，下一次也做错，再下次中目标刺激的个数减一。
 
-每次需要追踪的萤火虫数目n根据用户之前的成绩自适应，不追踪的萤火虫数目保持n+3。每次需要追踪（发光的）萤火虫数目遵从1 up 2 down的规则，即当前试次做对，下一次发光萤火虫的个数增加一个；当前试次做错，下一次发光萤火虫的数目不改变；当前做错，下一次也做错，再下次中发光萤火虫的个数减少一个。
-* 例：第1轮中有4发光萤火虫
-  + 用户第1轮做对，第2轮中发光萤火虫的个数变为5；【1 up】
-  + 用户第1轮做错，第2轮中发光萤火虫的个数还是4，若第2轮也做错，则第3轮中发光萤火虫的个数变为3；若第2轮做对，第3轮中发光萤火虫的个数变为5。【2 down】
+* 例：第1轮中有3只发光萤火虫，即5只不发光萤火虫，总计8只
+  + 用户第1轮做对，第2轮中发光萤火虫的个数变为4；
+  + 用户第1轮做错，第2轮中发光萤火虫的个数还是3，若第2轮也做错，则第3轮中发光萤火虫的个数变为2；若第2轮做对，第3轮中发光萤火虫的个数变为4。
+
+10个试次后，游戏停止。
 
 # 配置参数
 
