--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -69,9 +69,9 @@ knitr::include_graphics("/images/VSTM/fireflyfeedback.png")
 
 每次目标刺激的数目根据用户之前的成绩进行自适应，干扰刺激数目保持目标刺激+2，遵循如下规则：当前试次做对，下一次目标刺激个数加一；当前试次做错，下一次目标刺激的数目不改变；当前做错，下一次也做错，再下次中目标刺激的个数减一。
 
-* 例：第1轮中有3只发光萤火虫，即5只不发光萤火虫，总计8只
-  + 用户第1轮做对，第2轮中发光萤火虫的个数变为4；
-  + 用户第1轮做错，第2轮中发光萤火虫的个数还是3，若第2轮也做错，则第3轮中发光萤火虫的个数变为2；若第2轮做对，第3轮中发光萤火虫的个数变为4。
+* 例：第1个试次中有3只发光萤火虫，即5只不发光萤火虫，总计8只
+  + 用户第1个试次做对，第2个试次中发光萤火虫的个数变为4；
+  + 用户第1个试次做错，第2个试次中发光萤火虫的个数还是3，若第2个试次也做错，则第3个试次中发光萤火虫的个数变为2；若第2个试次做对，第3个试次中发光萤火虫的个数变为4。
 
 10个试次后，游戏停止。
 
@@ -106,3 +106,4 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "recs.csv")),
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "sdk.csv")))
 ```
+例：length[2,3,4,5] ACC[1,0.8,0.7,0.6],即该用户总共完成的试次里有目标刺激为2、3、4、5四种情况，分别的平均正确率为1,0.8,0.7,0.6。
