Enhance description using natural language instead of math symbols

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -32,7 +32,7 @@ SDK <- 301
 
 # 交互界面
 
-夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数为发光的个数+2），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
+夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数始终比发光的**多2个**），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
 
 ```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE, out.width="80%"}
 knitr::include_graphics("/images/VSTM/firefly.png")
