--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -100,12 +100,9 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "recs.csv")),
 
 # 试题算分
 
-* 算分码：`r SDK`
-* 传入参数：
-
 ```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "sdk.csv")))
+knitr::kable(
+  readr::read_csv(here::here("R", "config", NAME_EN, "sdk.csv")),
+  caption = paste0("传入参数（算分码：`", SDK, "`）")
+)
 ```
-
-* 例：`length[2,3,4,5]` `ACC[1,0.8,0.7,0.6]`
-即该用户总共完成的试次里有目标刺激为2，3，4，5四种情况，分别的平均正确率为1，0.8，0.7，0.6。
