remove unnecessary sentences

--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -56,7 +56,7 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 + **操作方式**
     - **`Android/iOS`**：点击触摸上的目标刺激，感应区域要比目标刺激本身大，但不能重合。
     - **`PC/Web`**：若`PC`拥有触摸屏，则用户可以使用`Android/iOS`的操作方式；若`PC`没有触摸屏，则要求用户使用标准输入设备鼠标点击进行操作。
-+ **判断正误**：所有试次都需要操作，没有操作则使用`-1`表示正确与否。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
++ **判断正误**：用户作答没有时间限制。当用户操作后，如果点击的目标和目标刺激重合，则为正确；若点击与目标刺激不符，则为错；与点击顺序无关。
 + **反馈**
     - 引导练习：`需要`对*正确*和*错误*给出听觉和视觉反馈。
     - 正式测试：`不需要`对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出视觉反馈（即用户点击的地方就变亮）；需要给用户做对个数的反馈，即正确点击的萤火虫的数量。
