Add hyperlink to the sequence file for each task

--- a/content/post/00903_CPT2.Rmd
+++ b/content/post/00903_CPT2.Rmd
@@ -54,7 +54,8 @@ VER <- "V4"
         - 本题目需要用户判断呈现的刺激序列中是否出现`A-X`配对，因此在序列中有一个很重要的设置是`A-X`出现的比例。同时，也要考虑到`A-(非X)`、`(非A)-X`这两种序列的比例。需要保证这三种序列比例一致。
         - 保证每个刺激出现的频率相等，即都为1/5。
 
-* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
+* 序列配置
+    + 见[序列文件](/seq/00903_CPT2.json){target="_blank"}。
     + 数组中每一个元素都是一个`json`对象，包含三个`名称/值(name/value)`配对，分别是
         - `length`：表示序列的长度
         - `stim`：包含了由**刺激名称**组成的多个序列
