--- a/content/post/00101_Flanker.Rmd
+++ b/content/post/00101_Flanker.Rmd
@@ -60,7 +60,8 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "stimuli.csv")),
         - 引导练习：需要对*正确*和*错误*给出听觉和视觉反馈。
         - 正式测试：不需要对*正确*和*错误*给出听觉和视觉反馈，需要对用户是否操作给出听觉和视觉反馈（即达到最大显示时间后用户还未操作时，需要给出负性的声音和视觉反馈；只要用户操作了，则给出中性的声音和视觉反馈）。
 
-* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
+* 序列配置
+    + 见[序列文件](/seq/00101_Flanker.json){target="_blank"}。
     + 采用`json`字符串传输序列配置。其中单个`json`对象由以下`名称/值`配对组成：
         - `length`：表示序列的长度
         - `stim`：包含了由**刺激编号**（和*“刺激列表”*一致）组成的多个序列
@@ -79,7 +80,7 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "configs.csv")),
 * 题目结果显示
     + 显示正确率和平均正确反应时间
     + 展示标准分数和超越百分比
-* 提交原始数据如下表（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
+* 提交原始数据如下表
 
 ```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "recs.csv")),
