--- a/content/post/03202_Shifting2.Rmd
+++ b/content/post/03202_Shifting2.Rmd
@@ -77,7 +77,8 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "stimuli.csv")),
         - 保证任务类型、切换条件、正确操作相互均衡。
         - 保证刺激在不同的任务类型中比例一致。
 
-* 序列配置（参考[标准](`r blogdown::shortcode("relref", "standard")`)中关于格式的说明）
+* 序列配置
+    + 见[序列文件](/seq/03202_Shifting.json){target="_blank"}。
     + **注意**：本题目的第一个试次是一个“填充”试次，因此若设试次数目为$n$时，实际需要完成的试次数目为$n + 1$。在序列的配置标准中也是如此，即`length`为$n$序列中，`stim`个数都是$n + 1$。
     + 数组中每一个元素都是一个`json`对象，包含六个`名称/值(name/value)`配对，分别是
         - `length`：表示序列的长度
